--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -29,8 +29,7 @@ jobs:
   docs-build:
     name: Build Docs
     runs-on: ubuntu-latest
-    needs:
-      - test
+    needs: test
 
     steps:
       - uses: actions/checkout@v4
@@ -54,8 +53,7 @@ jobs:
       pages: write
       id-token: write
 
-    needs:
-      - docs-build
+    needs: docs-build
 
     environment:
       name: github-pages
@@ -67,6 +65,8 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+
+    needs: docs-deploy
 
     permissions:
       contents: read
