--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "typedoc": "^0.28.2"
   },
   "engines": {
-    "node": "^20.19.0 || ^22.14.0"
+    "node": "^20.19.0 || ^22.14.0 || ^24.0.0"
   },
   "dependencies": {
     "undici": "^7.8.0"
