--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node": "^20.19.0 || ^22.14.0 || ^24.0.0"
   },
   "dependencies": {
+    "fast-xml-parser": "^5.2.0",
     "undici": "^7.8.0"
   }
 }
