--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "url": "https://github.com/nikeee/lean-s3"
   },
   "exports": {
-    "types": "./src/index.d.ts",
-    "default": "./src/index.js"
+    "types": "./dist/index.d.ts",
+    "default": "./dist/index.js"
   },
-  "types": "./src/index.d.ts",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "node --test src/*.test.js",
+    "build": "tsc",
+    "clean": "rimraf dist",
+    "test": "tsc --noEmit && node --test src/*.test.js",
     "test:integration": "node --test integration/*.test.js",
     "ci": "biome ci ./src",
     "docs": "typedoc",
     "lint": "biome lint ./src",
-    "format": "biome format --write ./src && biome lint --write ./src && biome check --write ./src"
+    "format": "biome format --write ./src && biome lint --write ./src && biome check --write ./src",
+    "prepublishOnly": "npm run clean && npm run build"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.828.0",
@@ -34,7 +37,9 @@
     "@types/node": "^24.0.1",
     "expect": "^30.0.0",
     "lefthook": "^1.11.13",
-    "typedoc": "^0.28.5"
+    "rimraf": "^6.0.1",
+    "typedoc": "^0.28.5",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": "^20.19.0 || ^22.14.0 || ^24.0.0"
