--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
     "lib": [
       "es2024"
     ],
-    "noEmit": true,
     "allowJs": true,
     "checkJs": true,
-    "strict": true
+    "strict": true,
+    "declaration": true,
+    "outDir": "./dist"
   },
   "include": [
     "./src"
