Fix typedoc entrypoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
   ],
   "typedocOptions": {
     "entryPoints": [
-      "src/index.d.ts"
+      "src/index.ts"
     ],
     "excludePrivate": true,
     "out": "docs"
