--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noImplicitOverride": true,
 
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false, // tsgo checks node_modules dependencies otherwise. See: https://github.com/microsoft/typescript-go/issues/931
     "strict": true,
     "declaration": true,
     "outDir": "./dist"
