--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsgo",
     "clean": "rimraf dist",
-    "test": "tsc && node --test dist/*.test.js",
-    "test:integration": "tsc && node --test dist/test.integration.js",
+    "test": "tsgo && node --test dist/*.test.js",
+    "test:integration": "tsgo && node --test dist/test.integration.js",
     "ci": "biome ci ./src",
     "docs": "typedoc",
     "lint": "biome lint ./src",
@@ -34,6 +34,7 @@
     "@testcontainers/localstack": "^11.0.3",
     "@testcontainers/minio": "^11.0.3",
     "@types/node": "^24.0.1",
+    "@typescript/native-preview": "^7.0.0-dev.20250612.1",
     "expect": "^30.0.0",
     "lefthook": "^1.11.13",
     "rimraf": "^6.0.1",
