--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "allowJs": true,
     "checkJs": false, // tsgo checks node_modules dependencies otherwise. See: https://github.com/microsoft/typescript-go/issues/931
     "strict": true,
-    "declaration": true,
-    "outDir": "./dist"
+    "noEmit": true
   },
   "include": [
     "./src"
