--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "undici": "^7.10.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.1",
+    "@biomejs/biome": "2.0.0",
     "@testcontainers/localstack": "^11.0.3",
     "@testcontainers/minio": "^11.0.3",
     "@types/node": "^24.0.3",
