--- a/biome.json
+++ b/biome.json
@@ -19,17 +19,8 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
-			"style": {
-				"noParameterAssign": "error",
-				"useAsConstAssertion": "error",
-				"useDefaultParameterLast": "error",
-				"useEnumInitializers": "error",
-				"useSelfClosingElements": "error",
-				"useSingleVarDeclarator": "error",
-				"noUnusedTemplateLiteral": "error",
-				"useNumberNamespace": "error",
-				"noInferrableTypes": "error",
-				"noUselessElse": "error"
+			"nursery": {
+				"noFloatingPromises": "error"
 			}
 		}
 	},
