--- a/bench/package.json
+++ b/bench/package.json
@@ -7,7 +7,8 @@
     "bench:crud": "tsx ./crud.ts",
     "bench:presign": "tsx ./presign.ts",
     "bench:presign:bun": "bun run ./presign.ts",
-    "bench:ops": "tsx ./benchmark-operations.js"
+    "bench:ops": "node ./benchmark-operations.js",
+    "bench:xml": "tsx ./xml.ts"
   },
   "license": "MIT",
   "type": "module",
