Add garage infra

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript/native-preview": "^7.0.0-dev.20250705.1",
     "expect": "^30.0.4",
     "lefthook": "^1.11.16",
+    "testcontainers": "^11.2.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typedoc": "^0.28.7"
