--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "type": "module",
   "scripts": {
     "build": "tsup",
-    "test": "tsgo && tsx --test src/*.test.ts",
-    "test:integration": "tsgo && tsx --test src/test.integration.ts",
+    "test": "tsgo && tsx --test src/*.test.ts src/test/*.test.ts",
+    "test:integration": "tsgo && tsx --test src/test/test.integration.ts",
     "ci": "biome ci ./src",
     "docs": "typedoc",
     "lint": "biome lint ./src",
