--- a/bench/package.json
+++ b/bench/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.873.0",
-    "@aws-sdk/s3-request-presigner": "^3.873.0",
+    "@aws-sdk/client-s3": "^3.876.0",
+    "@aws-sdk/s3-request-presigner": "^3.876.0",
     "@monstermann/tinybench-pretty-printer": "^0.1.0",
     "@testcontainers/minio": "^11.5.1",
     "aws4fetch": "^1.0.20",
@@ -22,5 +22,8 @@
     "mitata": "^1.0.34",
     "s3mini": "^0.5.0",
     "tinybench": "^5.0.1"
+  },
+  "overrides": {
+    "tinybench": "$tinybench"
   }
 }
