--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "undici": "^7.16.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.3",
-    "@testcontainers/localstack": "^11.7.2",
-    "@testcontainers/minio": "^11.7.2",
-    "@types/node": "^24.10.0",
-    "@typescript/native-preview": "^7.0.0-dev.20251103.1",
-    "expect": "^30.2.0",
-    "lefthook": "^2.0.2",
-    "testcontainers": "^11.7.2",
-    "tsdown": "^0.15.12",
-    "tsx": "^4.20.6",
-    "typedoc": "^0.28.14"
+    "@biomejs/biome": "2.2.4",
+    "@testcontainers/localstack": "^11.5.1",
+    "@testcontainers/minio": "^11.5.1",
+    "@types/node": "^24.3.1",
+    "@typescript/native-preview": "^7.0.0-dev.20250911.1",
+    "expect": "^30.1.2",
+    "lefthook": "^1.12.4",
+    "testcontainers": "^11.5.1",
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.5",
+    "typedoc": "^0.28.12"
   },
   "engines": {
     "node": "^20.19.3 || ^22.17.0 || ^24.4.0 || ^25"
