--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@biomejs/biome": "2.2.6",
     "@testcontainers/localstack": "^11.7.1",
     "@testcontainers/minio": "^11.7.1",
-    "@types/node": "^24.7.2",
-    "@typescript/native-preview": "^7.0.0-dev.20251013.1",
+    "@types/node": "^24.8.1",
+    "@typescript/native-preview": "^7.0.0-dev.20251019.1",
     "expect": "^30.2.0",
     "lefthook": "^1.13.6",
     "testcontainers": "^11.7.1",
@@ -60,6 +60,6 @@
     "typedoc": "^0.28.14"
   },
   "engines": {
-    "node": "^20.19.3 || ^22.17.0 || ^24.4.0"
+    "node": "^20.19.3 || ^22.17.0 || ^24.4.0 || ^25"
   }
 }
