--- a/bench/package.json
+++ b/bench/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.908.0",
-    "@aws-sdk/s3-request-presigner": "^3.908.0",
+    "@aws-lite/client": "^0.23.2",
+    "@aws-lite/s3": "^0.2.6",
+    "@aws-sdk/client-s3": "^3.913.0",
+    "@aws-sdk/s3-request-presigner": "^3.913.0",
     "@monstermann/tinybench-pretty-printer": "^0.2.0",
     "@testcontainers/minio": "^11.7.1",
     "aws4fetch": "^1.0.20",
@@ -22,5 +24,8 @@
     "mitata": "^1.0.34",
     "s3mini": "^0.6.0",
     "tinybench": "^5.0.1"
+  },
+  "devDependencies": {
+    "@aws-lite/s3-types": "^0.2.6"
   }
 }
