--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "test": "tsgo && tsx --test src/*.test.ts src/test/*.test.ts",
     "test:integration": "tsgo && tsx --test src/test/test.integration.ts",
     "ci": "biome ci ./src",
@@ -55,7 +55,7 @@
     "expect": "^30.2.0",
     "lefthook": "^2.0.2",
     "testcontainers": "^11.7.2",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.15.12",
     "tsx": "^4.20.6",
     "typedoc": "^0.28.14"
   },
