--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "moduleResolution": "nodenext",
     "target": "es2024",
     "lib": [
-      "es2024"
+      "es2024",
+      "dom" // needed for WASM
     ],
 
     "moduleDetection": "force",
