--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "expect": "^30.2.0",
     "lefthook": "^2.0.3",
     "testcontainers": "^11.8.0",
-    "tsdown": "^0.16.1",
+    "tsdown": "^0.16.4",
     "tsx": "^4.20.6",
-    "typedoc": "^0.28.14"
+    "typedoc": "^0.28.14",
+    "vite-plugin-zig-wasm": "^0.1.4"
   },
   "engines": {
     "node": "^20.19.5 || ^22.21.1 || ^24.11.0 || ^25.1.0"
