--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -23,7 +23,7 @@ jobs:
           cache: npm
 
       - run: npm ci
-      - run: npm run ci
+      - run: node --run ci
       - run: npm test --silent
 
   docs-build:
@@ -39,7 +39,7 @@ jobs:
           cache: npm
 
       - run: npm ci
-      - run: npm run docs
+      - run: node --run docs
 
       - uses: actions/upload-pages-artifact@v4
         with:
