Revert "npm run -> node --run"
This reverts commit 24947d5381aaf0048668905cddfbd3c94370b82e.

--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -23,7 +23,7 @@ jobs:
           cache: npm
 
       - run: npm ci
-      - run: node --run ci
+      - run: npm run ci
       - run: npm test --silent
 
   docs-build:
@@ -39,7 +39,7 @@ jobs:
           cache: npm
 
       - run: npm ci
-      - run: node --run docs
+      - run: npm run docs
 
       - uses: actions/upload-pages-artifact@v4
         with:
