--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -28,7 +28,7 @@ jobs:
 
   docs-build:
     name: Build Docs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     needs: test
 
     steps:
@@ -47,7 +47,7 @@ jobs:
 
   docs-deploy:
     name: Deploy Docs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
 
     permissions:
       pages: write
@@ -64,7 +64,7 @@ jobs:
         uses: actions/deploy-pages@v4
 
   publish:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
 
     needs: docs-deploy
 
