--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
   "name": "lean-s3",
-  "author": "Niklas Mollenhauer",
-  "license": "MIT",
   "version": "0.9.11",
   "description": "A server-side S3 API for the regular user.",
   "keywords": [
-    "s3",
-    "client",
-    "s3 client",
-    "s3 sdk",
-    "b2",
-    "b2 client",
-    "r2",
-    "r2 client",
-    "cloudflare",
-    "cloudflare r2",
     "AWS S3",
     "Azure Blob Storage",
-    "Google Cloud Storage",
     "Ceph",
+    "Google Cloud Storage",
+    "b2",
+    "b2 client",
+    "backblaze",
+    "client",
+    "cloudflare",
+    "cloudflare r2",
     "mibion",
-    "backblaze"
+    "r2",
+    "r2 client",
+    "s3",
+    "s3 client",
+    "s3 sdk"
   ],
+  "license": "MIT",
+  "author": "Niklas Mollenhauer",
   "repository": {
     "type": "git",
     "url": "https://github.com/nikeee/lean-s3"
   },
-  "types": "./dist/index.d.mts",
-  "main": "./dist/index.mjs",
-  "type": "module",
   "files": [
     "dist"
   ],
+  "type": "module",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "scripts": {
     "build": "tsdown",
     "test": "tsgo && tsx --test src/*.test.ts src/test/*.test.ts",
