--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "biomejs.biome",
-    "TypeScriptTeam.native-preview"
-  ]
+  "recommendations": ["biomejs.biome", "TypeScriptTeam.native-preview"]
 }
