--- a/bench/package.json
+++ b/bench/package.json
@@ -1,7 +1,9 @@
 {
   "name": "lean-s3-benchmark",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
+  "type": "module",
   "main": "presign.ts",
   "scripts": {
     "bench:crud": "tsx ./crud.ts",
@@ -10,8 +12,6 @@
     "bench:ops": "node ./benchmark-operations.js",
     "bench:xml": "tsx ./xml.ts"
   },
-  "license": "MIT",
-  "type": "module",
   "dependencies": {
     "@aws-lite/client": "^0.23.2",
     "@aws-lite/s3": "^0.2.6",
@@ -24,9 +24,9 @@
     "fast-xml-parser": "^5.3.7",
     "minio": "^8.0.6",
     "mitata": "^1.0.34",
-    "tsx": "^4.21.0",
     "s3mini": "^0.9.1",
-    "tinybench": "^6.0.0"
+    "tinybench": "^6.0.0",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@aws-lite/s3-types": "^0.2.6"
