--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "target": "es2024",
-    "lib": [
-      "es2024"
-    ],
+    "lib": ["es2024"],
 
     "moduleDetection": "force",
     "isolatedModules": true,
@@ -19,13 +17,9 @@
     "strict": true,
     "noEmit": true
   },
-  "include": [
-    "./src"
-  ],
+  "include": ["./src"],
   "typedocOptions": {
-    "entryPoints": [
-      "src/index.ts"
-    ],
+    "entryPoints": ["src/index.ts"],
     "excludePrivate": true,
     "excludeInternal": true,
     "out": "docs"
