--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["biomejs.biome", "TypeScriptTeam.native-preview"]
+  "recommendations": ["oxc.oxc-vscode", "TypeScriptTeam.native-preview"]
 }
