--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,10 +10,10 @@
   },
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "[javascript]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "oxc.oxc-vscode"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "oxc.oxc-vscode"
   },
   "files.associations": {
     "node_api.h": "c",
